--- a/index.css
+++ b/index.css
@@ -56,3 +56,56 @@
     margin-left: 40px;
     margin-top: 150px;
 }
+.order {
+    color: white;
+    font-size: 50px;
+    background-color: orange;
+    width: 300px;
+    height: 100px;
+    margin-top: 150px;
+    margin-left: 50px;
+    text-align: center;
+  }
+  .service_eat {
+    text-align: center;
+    background-color: lightgrey;
+    margin-top: 100px;
+    margin-bottom: 50px;
+  }
+  .service_title {
+    font-size: 40px;
+    color: orange;
+    font-family: roboto;
+    font-weight: bold;
+  }
+  .service_desc {
+    font-size: 20px;
+    font-style: italic;
+}
+.service_column {
+    display: flex;
+    justify-content: space-around;
+    column-gap: 10px;
+    row-gap: 50px;
+    flex-wrap: wrap;
+  }
+  .service_columns {
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    margin: 20px;
+    text-align: center;
+    border-radius: 2%;
+    background-color: white;
+  }
+  #column {
+    font-family: Roboto;
+    background-color: orange;
+    color: white;
+    width: 40px;
+    height: 40px;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 35px;
+  }
