--- a/index.css
+++ b/index.css
@@ -109,3 +109,18 @@
     text-align: center;
     font-size: 35px;
   }
+  .review {
+    background-repeat: no-repeat;
+    text-align: center;
+    margin-bottom: 200px;
+    background-color: black;
+  }
+  .review_section {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    font-size: 20px;
+    width: 900px;
+    height: 500px;
+    float: right;
+  }
