--- a/index.css
+++ b/index.css
@@ -124,3 +124,46 @@
     height: 500px;
     float: right;
   }
+  .menu {
+    font-family: roboto;
+    font-size: 20px;
+    background-color: lightgray;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    column-gap: 20px;
+    row-gap: 50px;
+    margin: 10px;
+  }
+  .menu_eat {
+    text-align: center;
+    font-weight: 700;
+    position: absolute;
+    margin: -10%;
+  }
+  menu_eat,h1 {
+    color: orange;
+  }
+  .menu1 {
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    height: 300px;
+    padding: 5px;
+    flex-wrap: wrap;
+    border: 1px solid whitesmoke;
+    background-color: white;
+    text-align: center;
+  }
+  .menufood {
+    height: 300px;
+    width: 300px;
+  }
+  .menu_desc {
+    font-size: 20px;
+  }
+  menu1,h1{
+      color:orange;
+  }
+  menu1,h3{
+      color: orange;
